@@ -1,4 +1,5 @@
 3.2.2 dev
+- Bugfix: The process other routing is never called.
 
 3.2.1
 - Bugfix: Wrong error handler restoration after deleting
